[project]
name = "pytorch-mdn"
version = "0.1.0"
description = "Mixture Density Network (MDN) implemented in PyTorch"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lightning>=2.5.6",
    "numpy>=2.3.4",
    "polars>=1.35.2",
    "pydantic>=2.12.4",
    "scikit-learn>=1.7.2",
    "timm>=1.0.22",
    "torch>=2.9.0",
]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=9.0.1",
    "ruff>=0.14.3",
    "ty>=0.0.1a25",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::UserWarning:torch.autograd.graph",
]

[tool.ty.rules]
unresolved-attribute = "ignore"
